# voxel-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: suzanne.glb
assets/shaders/: shaders.wgsl
cmake/: utils.cmake
src/: game.cpp  game.hpp  macros.hpp  main.cpp
src/assets/: mesh_loader.cpp  mesh_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/components/: camera.cpp  camera.hpp  render_component.hpp  transform.cpp  transform.hpp
src/core/: files.cpp  files.hpp  memory.hpp  timer.hpp  world.hpp
src/rendering/: draw_list.cpp  draw_list.hpp  material.hpp  mesh.cpp  mesh.hpp  render_backend.cpp  render_backend.hpp  texture.cpp  texture.hpp  vertex.hpp  vertex_layout.hpp
src/systems/: renderer.cpp  renderer.hpp
